--- a/frontend/pages/Emergencia/vistaEmergencias.html
+++ b/frontend/pages/Emergencia/vistaEmergencias.html
@@ -150,10 +150,7 @@
                         <label for="equipos" class="form-label">Equipos asignados</label>
                         <div class="input-group">
                             <select class="form-select" id="equipos" name="equipos">
-                                <option value="">Seleccione equipo...</option>
-                                <option value="equipo1">Equipo 1</option>
-                                <option value="equipo2">Equipo 2</option>
-                                <option value="equipo3">Equipo 3</option>
+                                <option value="">Seleccione...</option>
                             </select>
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalInsertarEquipo">+</button>
                         </div>
@@ -257,23 +254,23 @@
                         </div>
                     </div>
 
-                    <!-- Vehículo -->
+                    <!-- Vehículo - Equipo -->
                     <div class="row mb-4">
                         <div class="col-md-6">
                             <label for="vehiculo" class="form-label">Vehículo Asignados</label>
                             <select class="form-select" id="selectVehiculo">
                             </select>
                         </div>
-                    </div>
-
-                    <!-- Vehículo -->
-                    <div class="row mb-4">
                         <div class="col-md-6">
                             <label for="equipo" class="form-label">Equipo Asignados</label>
                             <select class="form-select" id="selectEquipo">
+                                <option value="1">Equipo 1</option>
+                                <option value="2">Equipo 2</option>
                             </select>
                         </div>
                     </div>
+
+                    
                     <!-- Personal asignado -->
                     <div class="mb-2 fw-bold">
                         Personal Asignado
