--- a/frontend/pages/Emergencia/vistaEmergencias.html
+++ b/frontend/pages/Emergencia/vistaEmergencias.html
@@ -122,14 +122,12 @@
                 <!-- Fila 2 -->
                 <div class="row mb-3">
                     <div class="col-mg-6 col-lg-4">
-                        <label for="codigo_tipo" class="form-label">Tipo</label>
-                        <select class="form-select" id="codigo_tipo" name="codigo_tipo">
+                        <label for="tipo" class="form-label">Tipo</label>
+                        <select class="form-select" id="tipo" name="tipo">
                             <option value="">Seleccione...</option>
-                            <option value="1">1</option>
-                            <option value="2">Avería</option>
-                            <option value="3">Instalación</option>
-                            <option value="4">Revisión</option>
-                            
+                            <option value="averia">Avería</option>
+                            <option value="instalacion">Instalación</option>
+                            <option value="revision">Revisión</option>
                         </select>
                     </div>
                     <div class="col-mg-6 col-lg-4">
