--- a/frontend/pages/Emergencia/vistaEmergencias.html
+++ b/frontend/pages/Emergencia/vistaEmergencias.html
@@ -123,11 +123,7 @@
                 <div class="row mb-3">
                     <div class="col-mg-6 col-lg-4">
                         <label for="tipo" class="form-label">Tipo</label>
-                        <select class="form-select" id="tipo" name="tipo">
-                            <option value="">Seleccione...</option>
-                            <option value="averia">Avería</option>
-                            <option value="instalacion">Instalación</option>
-                            <option value="revision">Revisión</option>
+                        <select class="form-select" id="tipoEmergenciaInsert" name="tipo">
                         </select>
                     </div>
                     <div class="col-mg-6 col-lg-4">
