--- a/frontend/pages/Emergencia/vistaEmergencias.html
+++ b/frontend/pages/Emergencia/vistaEmergencias.html
@@ -123,7 +123,7 @@
                 <div class="row mb-3">
                     <div class="col-mg-6 col-lg-4">
                         <label for="tipo" class="form-label">Tipo</label>
-                        <select class="form-select" id="tipoEmergenciaInsert" name="tipo">
+                        <select class="form-select" id="tipoEmergenciaInsert" name="codigo_tipo">
                         </select>
                     </div>
                     <div class="col-mg-6 col-lg-4">
