TipoEmergencia conexion backend

--- a/frontend/pages/Emergencia/vistaTipoEmergencia.html
+++ b/frontend/pages/Emergencia/vistaTipoEmergencia.html
@@ -101,11 +101,11 @@
                         <div class="row mb-3">
                             <div class="col-md-6">
                                 <label for="insertNombre" class="form-label">Nombre</label>
-                                <input type="text" class="form-control" id="insertNombre" name="nombre" data-col="1" required>
+                                <input type="text" class="form-control" id="insertNombre" name="nombre" required>
                             </div>
                             <div class="col-md-6">
                                 <label for="insertGrupo" class="form-label">Grupo</label>
-                                <select class="form-select m-1 filtro" id="insertGrupo" data-col="2" name="grupo" required>
+                                <select class="form-select m-1" id="insertGrupo"name="grupo" required>
                                     <option value="" disabled selected>Seleccione un grupo</option>
                                     <option value="incendios">Incendios</option>
                                     <option value="accidentes">Accidentes</option>
@@ -164,27 +164,8 @@
                 </div>
                 <div class="modal-body">
                     <form id="formEditar">
-                        <div class="mb-3">
-                            <label for="editIdTipo" class="form-label">ID Tipo</label>
-                            <input type="text" class="form-control" id="editIdTipo" name="id_tipo" readonly>
-                        </div>
-                        <div class="mb-3">
-                            <label for="editNombre" class="form-label">Nombre</label>
-                            <input type="text" class="form-control" id="editNombre" name="nombre" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="editGrupo" class="form-label">Grupo</label>
-                            <input type="text" class="form-control" id="editGrupo" name="grupo" required>
-                        </div>
+                        <!-- Los campos del formulario se generarán dinámicamente -->
                     </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                        Cancelar
-                    </button>
-                    <button type="button" class="btn btn-primary" id="btnGuardarCambios">
-                        Guardar cambios
-                    </button>
                 </div>
             </div>
         </div>
@@ -215,7 +196,7 @@
     </div>
     <!-- FOOTER -->
     <div id="footer-placeholder" class="mt-auto"></div>
-
+    <div id="alert-container" class="position-fixed top-0 end-0 p-3" style="z-index: 1080;"></div>
 
 </body>
 
