--- a/frontend/pages/AreaPersonal/vistaAreaPersonal.html
+++ b/frontend/pages/AreaPersonal/vistaAreaPersonal.html
@@ -444,6 +444,8 @@
             }
         });
     </script>
+    <!-- ALERT-->
+    <div id="alert-container" class="position-fixed top-0 end-0 p-3" style="z-index: 1080;"></div>
 
 </body>
 </html>
