--- a/frontend/pages/Calendario/vistaCalendario.html
+++ b/frontend/pages/Calendario/vistaCalendario.html
@@ -102,6 +102,8 @@
 
     <!-- JS CALENDARIO -->
     <script src="scriptCalendario.js"></script>
+    <!-- ALERT-->
+    <div id="alert-container" class="position-fixed top-0 end-0 p-3" style="z-index: 1080;"></div>
 
 </body>
 </html>
