--- a/frontend/pages/Emergencia/vistaEmergencia.html
+++ b/frontend/pages/Emergencia/vistaEmergencia.html
@@ -318,6 +318,8 @@
 
     <!-- FOOTER -->
     <div id="footer-placeholder"></div>
+    <!-- ALERT-->
+    <div id="alert-container" class="position-fixed top-0 end-0 p-3" style="z-index: 1080;"></div>
 
 
 </body>
