--- a/frontend/pages/Mantenimiento/vistaMantenimiento.html
+++ b/frontend/pages/Mantenimiento/vistaMantenimiento.html
@@ -218,6 +218,8 @@
     <!-- SCRIPTS -->
     <script src="/frontend/javascript/mantenimiento.js"></script>
     <script src="/frontend/javascript/script_filtro_tabla.js"></script>
+    <!-- ALERT-->
+    <div id="alert-container" class="position-fixed top-0 end-0 p-3" style="z-index: 1080;"></div>
 
 </body>
 
