--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -399,5 +399,8 @@
         const today = new Date().toLocaleDateString('es-ES', options);
         document.getElementById('current-date').textContent = today;
     </script>
+        <!-- ALERT-->
+    <div id="alert-container" class="position-fixed top-0 end-0 p-3" style="z-index: 1080;"></div>
+
 </body>
 </html>
