--- a/frontend/pages/Emergencia/vistaTipoEmergencia.html
+++ b/frontend/pages/Emergencia/vistaTipoEmergencia.html
@@ -196,6 +196,7 @@
     </div>
     <!-- FOOTER -->
     <div id="footer-placeholder" class="mt-auto"></div>
+    <!-- ALERT-->
     <div id="alert-container" class="position-fixed top-0 end-0 p-3" style="z-index: 1080;"></div>
 
 </body>
