--- a/frontend/pages/Guardia/vistaCalendario.html
+++ b/frontend/pages/Guardia/vistaCalendario.html
@@ -42,6 +42,8 @@ document.addEventListener("DOMContentLoaded", function () {
     calendar.render();
 });
 </script>
+    <!-- ALERT-->
+    <div id="alert-container" class="position-fixed top-0 end-0 p-3" style="z-index: 1080;"></div>
 
 </body>
 </html>
