Unioin de instalaciones

--- a/frontend/pages/Instalacion/vistaInstalacion.html
+++ b/frontend/pages/Instalacion/vistaInstalacion.html
@@ -102,23 +102,23 @@
                         <div class="row mb-3">
                             <div class="col-md-6">
                                 <label for="insertNombre" class="form-label">Nombre</label>
-                                <input type="text" class="form-control" id="insertNombre" name="Nombre" required>
+                                <input type="text" class="form-control" id="insertNombre" name="nombre" required>
                             </div>
                             <div class="col-md-6">
                                 <label for="insertDireccion" class="form-label">Direccion</label>
-                                <input type="text" class="form-control" id="insertDireccion" name="Direccion" required>
+                                <input type="text" class="form-control" id="insertDireccion" name="direccion" required>
                             </div>
                             <div class="col-md-6">
                                 <label for="insertTelefono" class="form-label">Telefono</label>
-                                <input type="text" class="form-control" id="insertTelefono" name="Telefono" required>
+                                <input type="text" class="form-control" id="insertTelefono" name="telefono" required>
                             </div>
                             <div class="col-md-6">
                                 <label for="insertLocalidad" class="form-label">Localidad</label>
-                                <input type="text" class="form-control" id="insertLocalidad" name="Localidad" required>
+                                <input type="text" class="form-control" id="insertLocalidad" name="localidad" required>
                             </div>
                             <div class="col-md-6">
                                 <label for="insertCorreo" class="form-label">Correo</label>
-                                <input type="text" class="form-control" id="insertCorreo" name="Correo" required>
+                                <input type="text" class="form-control" id="insertCorreo" name="correo" required>
                             </div>
                         </div>
                         <!-- Botones centrados debajo -->
