--- a/frontend/pages/TurnoRefuerzo/vistaRefuerzo.html
+++ b/frontend/pages/TurnoRefuerzo/vistaRefuerzo.html
@@ -30,6 +30,11 @@
     <!-- FullCalendar -->
     <link href="https://cdn.jsdelivr.net/npm/fullcalendar@latest/main.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@latest/index.global.min.js"></script>
+
+       <!-- Controlador específico de la vista -->
+    <script type="module"
+        src="/frontend/javascript/controllers_f/TurnoRefuerzoController.js">
+    </script>
 </head>
 
 <body class="bg-white text-dark d-flex flex-column">
@@ -107,7 +112,6 @@
                             <tr>
                                 <th>ID Turno de Refuerzo</th>
                                 <th>Nombre Personas</th>
-                                <th>Fecha</th>
                                 <th>H_inicio</th>
                                 <th>H_fin</th>
                                 <th>Accion</th>
@@ -118,7 +122,6 @@
                             <tr>
                                 <td class="d-none d-md-table-cell">INUR1</td> <!-- Usar la clase "d-none d-md-table-cell" para las columnas que desaparezcan en TABLET-->   
                                 <td>Incendio edificio</td>
-                                <td></td>
                                 <td></td>
                                 <td></td>
                                 <td class="d-flex justify-content-around">                            
