Flujo completo de inicio de sesión y cerrar sesión además de otros detalles como que aparezca el nombre del usuario en el header

--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -11,7 +11,7 @@
 
     <!-- Configuración y Header/Footer -->
     <script src="/frontend/config/config.js"></script>
-    <script src="/frontend/javascript/header_footer.js" defer></script>
+    <script type="module" src="/frontend/javascript/header_footer.js" defer></script>
 
     <script>
         // Cargar CSS del proyecto
