--- a/frontend/pages/Emergencia/vistaEmergencias.html
+++ b/frontend/pages/Emergencia/vistaEmergencias.html
@@ -20,7 +20,7 @@
     </script>
 
     <!-- JS dependientes -->
-    <script src="/frontend/javascript/header_footer.js" defer></script>
+    <script type="module" src="/frontend/javascript/header_footer.js" defer></script>
     <script src="/frontend/javascript/script_filtro_tabla.js" defer></script>
     
     <!-- Bootstrap Bundle JS -->
