--- a/frontend/pages/Login/login.html
+++ b/frontend/pages/Login/login.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
+    <!-- Configuración -->
+    <script src="/frontend/config/config.js"></script>
+
     <script>
         loadFavicon("favicon.png");
     </script>
@@ -39,7 +42,7 @@
                             </div>
 
                             <!-- FORMULARIO -->
-                            <form>
+                            <form id="loginForm">
 
                                 <!-- Usuario -->
                                 <div class="mb-3">
