Funcionando el botón de cerrar sesión del área personal

--- a/frontend/pages/AreaPersonal/vistaAreaPersonal.html
+++ b/frontend/pages/AreaPersonal/vistaAreaPersonal.html
@@ -425,7 +425,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-danger">Cerrar sesión</button>
+                    <button type="button" class="btn btn-danger logout-link">Cerrar sesión</button>
                 </div>
             </div>
         </div>
