MAteriales  no terminado

--- a/frontend/pages/Material/vistaMaterial.html
+++ b/frontend/pages/Material/vistaMaterial.html
@@ -76,18 +76,18 @@
                     <table class="table table-bordered table-striped" id="tabla">
                         <thead class="table-dark">
                             <tr> <!-- Cabecera de la tabla -->
-                                <th>ID</th> <!-- Usar la clase "d-none d-md-table-cell" para las columnas que desaparezcan en TABLET-->
+                                <th>ID</th>
                                 <th>Nombre</th>
-                                <th class="d-none d-md-table-cell">Descripcion</th>
+                                <th class="d-none d-md-table-cell">Descripción</th>
                                 <th>Estado</th>
-                                <th class="d-none d-md-table-cell">Fech_Compra</th>
-                                <th class="d-none d-md-table-cell">Caducidad</th>
-                                <th class="d-none d-md-table-cell">Periodicidad</th>
-                                <th class="d-none d-md-table-cell">Unidades</th>
+                                <th class="d-none d-md-table-cell">Categoría</th>
+                                <th class="d-none d-md-table-cell">Asignado A</th>
+                                <th class="d-none d-md-table-cell">Ubicación</th>
                                 <th>Acción</th>
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- Los datos se cargarán dinámicamente desde MaterialController.js -->
                         </tbody>
                     </table>
                 </div>
