--- a/frontend/pages/Aviso/vistaAviso.html
+++ b/frontend/pages/Aviso/vistaAviso.html
@@ -21,8 +21,9 @@
     </script>
 
     <!-- JS dependientes -->
-    <script src="/frontend/javascript/header_footer.js" defer></script>
+    <script type="module" src="/frontend/javascript/header_footer.js" defer></script>
     <script src="/frontend/javascript/script_filtro_tabla.js" defer></script>
+    <script type="module" src="/frontend/javascript/controllers_f/AvisoController.js"></script>
 
     <!-- Bootstrap Bundle JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -98,8 +99,8 @@
                             </div>
                             <div class="col-md-6">
                             
-                                <label for="insertDestinatario" class="form-label">Destinatario:</label>
-                                <select class="form-select" id="insertDestinatario" multiple>
+                                <label for="insertDestinatarios" class="form-label">Destinatario:</label>
+                                <select class="form-select" id="insertDestinatarios" multiple>
                                     <option value="">Todos</option>
                                     <!-- Se deberían cargar con datos reales -->
                                 </select>
@@ -221,7 +222,6 @@
     <div id="footer-placeholder" class="mt-auto"></div>
     <!-- ALERT-->
     <div id="alert-container" class="position-fixed top-0 end-0 p-3" style="z-index: 1080;"></div>
-
 
 </body>
 
