Salida conex OK

--- a/frontend/pages/Salida/vistaSalida.html
+++ b/frontend/pages/Salida/vistaSalida.html
@@ -80,9 +80,9 @@
                     <table class="table table-bordered table-striped" id="tabla">
                         <thead class="table-dark">
                             <tr> <!-- Cabecera de la tabla -->
-                                <th>ID Registro</th>
+                                <th class="d-none d-md-table-cell">ID Registro</th>
                                 <th>Matricula</th>
-                                <th>ID Bombero</th>
+                                <th class="d-none d-md-table-cell">ID Bombero</th>
                                 <th>F_Entrega</th>
                                 <th>F_Recogida</th>
                                 <th class="d-none d-md-table-cell">KM_inicio</th> <!-- Usar la clase "d-none d-md-table-cell" para las columnas que desaparezcan en TABLET-->
