--- a/frontend/pages/Material/vistaMaterial.html
+++ b/frontend/pages/Material/vistaMaterial.html
@@ -16,14 +16,12 @@
     <script>
         loadCSS("header_footer.css");
         loadCSS("plantilla_css.css");
-        // Cargar favicon dinámicamente
         loadFavicon("favicon.png");
     </script>
 
     <!-- JS dependientes -->
     <script src="/frontend/javascript/header_footer.js" defer></script>
     <script src="/frontend/javascript/script_filtro_tabla.js" defer></script>
-    <!-- Bootstrap Bundle JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="/frontend/javascript/controllers_f/MaterialController.js"></script>
 </head>
@@ -42,21 +40,19 @@
         <!-- CONTENIDO PRINCIPAL -->
         <main class="p-3 w-100">
             <div class="d-flex justify-content-between align-items-center mb-4">
-                <h1 class="mb-0">Materiales</h1>
-                <!-- Icono de ayuda que redirige a Notion -->
+                <h1 class="mb-0">Gestión de Materiales</h1>
                 <a href="https://www.notion.so/TU_PAGINA" target="_blank" class="text-dark" title="Abrir ayuda en Notion">
                     <i class="bi bi-question-circle fs-3"></i>
                 </a>
             </div>
 
             <div>
-                <p>[Migas de pan]</p>
+                <p><a href="/dashboard">Inicio</a> / Materiales</p>
             </div>
 
             <!-- Contenedor tabla con filtro-->
             <div class="container mt-4 p-0"> 
-                <div id="filtroTabla" class="m-0 row d-flex justify-content-around"> <!-- Filtro -->
-                    
+                <div id="filtroTabla" class="m-0 row d-flex justify-content-around">
                     <div class="col-md-5 d-flex align-items-center m-1">
                         <label class="m-2" for="nombre">Nombre:</label>
                         <input placeholder="Nombre" id="nombre" type="text" class="form-control m-1 filtro" data-col="1">
@@ -70,15 +66,20 @@
                         </select>
                     </div>
                 </div>
+                
                 <table class="table table-bordered table-striped" id="tabla">
                     <thead class="table-dark">
-                        <tr> <!-- Cabecera de la tabla -->
+                        <tr>
                             <th class="d-none d-md-table-cell">ID</th>
                             <th>Nombre</th>
                             <th class="d-none d-md-table-cell">Descripción</th>
                             <th>Estado</th>
                             <th class="d-none d-md-table-cell">Categoría</th>
-                            <th class="d-none d-md-table-cell">Asignado A</th>
+                            <th>Tipo</th>
+                            <th>Elemento</th>
+                            <th>Identificador</th>
+                            <th>Unidades</th>
+                            <th>Nº Serie</th>
                             <th>Acción</th>
                         </tr>
                     </thead>
@@ -95,7 +96,6 @@
                             <label for="insertCategoria" class="form-label">Categoría</label>
                             <select class="form-select" id="insertCategoria" name="id_categoria" required>
                                 <option value="">Seleccione una categoría...</option>
-                                <!-- SE CARGARÁN DESDE LA BD -->
                             </select>
                         </div>
                         <div class="col-mg-6 col-lg-4">
@@ -133,14 +133,12 @@
                             <label for="selectMaterialVehiculo" class="form-label">Material</label>
                             <select class="form-select" id="selectMaterialVehiculo" name="id_material" required>
                                 <option value="">Seleccione un material...</option>
-                                <!-- SE CARGARÁN DESDE LA BD -->
                             </select>
                         </div>
                         <div class="col-mg-6 col-lg-4">
                             <label for="selectVehiculo" class="form-label">Vehículo (Matrícula)</label>
                             <select class="form-select" id="selectVehiculo" name="matricula" required>
                                 <option value="">Seleccione un vehículo...</option>
-                                <!-- SE CARGARÁN DESDE LA BD -->
                             </select>
                         </div>
                         <div class="col-mg-6 col-lg-4">
@@ -151,7 +149,7 @@
                     <div class="row mb-3">
                         <div class="col-mg-6 col-lg-4">
                             <label for="unidadesVehiculo" class="form-label">Unidades</label>
-                            <input type="text" class="form-control" id="unidadesVehiculo" name="unidades" placeholder="Ej: 5" required>
+                            <input type="number" class="form-control" id="unidadesVehiculo" name="unidades" placeholder="Ej: 5" min="1" required>
                         </div>
                     </div>
                     <div class="d-flex justify-content-center gap-2">
@@ -170,14 +168,12 @@
                             <label for="selectMaterialFuncionario" class="form-label">Material</label>
                             <select class="form-select" id="selectMaterialFuncionario" name="id_material" required>
                                 <option value="">Seleccione un material...</option>
-                                <!-- SE CARGARÁN DESDE LA BD -->
                             </select>
                         </div>
                         <div class="col-mg-6 col-lg-4">
                             <label for="selectFuncionario" class="form-label">Funcionario</label>
                             <select class="form-select" id="selectFuncionario" name="id_bombero" required>
                                 <option value="">Seleccione un funcionario...</option>
-                                <!-- SE CARGARÁN DESDE LA BD -->
                             </select>
                         </div>
                         <div class="col-mg-6 col-lg-4">
@@ -201,21 +197,18 @@
                             <label for="selectMaterialAlmacen" class="form-label">Material</label>
                             <select class="form-select" id="selectMaterialAlmacen" name="id_material" required>
                                 <option value="">Seleccione un material...</option>
-                                <!-- SE CARGARÁN DESDE LA BD -->
                             </select>
                         </div>
                         <div class="col-mg-6 col-lg-3">
                             <label for="selectInstalacion" class="form-label">Instalación</label>
                             <select class="form-select" id="selectInstalacion" name="id_instalacion" required>
                                 <option value="">Seleccione una instalación...</option>
-                                <!-- SE CARGARÁN DESDE LA BD -->
                             </select>
                         </div>
                         <div class="col-mg-6 col-lg-3">
                             <label for="selectAlmacen" class="form-label">Almacén</label>
                             <select class="form-select" id="selectAlmacen" name="id_almacen" required>
                                 <option value="">Seleccione un almacén...</option>
-                                <!-- SE CARGARÁN DESDE LA BD -->
                             </select>
                         </div>
                         <div class="col-mg-6 col-lg-3">
@@ -226,7 +219,7 @@
                     <div class="row mb-3">
                         <div class="col-mg-6 col-lg-3">
                             <label for="unidadesAlmacen" class="form-label">Unidades</label>
-                            <input type="text" class="form-control" id="unidadesAlmacen" name="unidades" placeholder="Ej: 10" required>
+                            <input type="number" class="form-control" id="unidadesAlmacen" name="unidades" placeholder="Ej: 10" min="1" required>
                         </div>
                     </div>
                     <div class="d-flex justify-content-center gap-2">
@@ -251,12 +244,8 @@
                     <p class="text-muted mb-0">Esta acción no se puede deshacer.</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                        Cancelar
-                    </button>
-                    <button type="button" class="btn btn-danger" id="btnConfirmarEliminar">
-                        Eliminar
-                    </button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-danger" id="btnConfirmarEliminar">Eliminar</button>
                 </div>
             </div> 
         </div>
@@ -271,17 +260,11 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
                 </div>
                 <div class="modal-body">
-                    <form id="formEditar">
-                        <!-- Los campos del formulario se generarán dinámicamente -->
-                    </form>
+                    <form id="formEditar"></form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                        Cancelar
-                    </button>
-                    <button type="button" class="btn btn-primary" id="btnGuardarCambios">
-                        Guardar cambios
-                    </button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-primary" id="btnGuardarCambios">Guardar cambios</button>
                 </div>
             </div>
         </div>
@@ -295,13 +278,9 @@
                     <h5 class="modal-title">Detalle del material</h5>
                     <button class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
-                <div class="modal-body" id="modalVerBody">
-                   <!-- Body dinamico del modal-->
-                </div>
+                <div class="modal-body" id="modalVerBody"></div>
                 <div class="modal-footer">
-                    <button class="btn btn-secondary" data-bs-dismiss="modal">
-                        Cerrar
-                    </button>
+                    <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         </div>
@@ -309,6 +288,5 @@
 
     <!-- FOOTER -->
     <div id="footer-placeholder"></div>
-
 </body>
 </html>
