--- a/frontend/pages/Edicion/vistaEdicion.html
+++ b/frontend/pages/Edicion/vistaEdicion.html
@@ -26,6 +26,11 @@
 
     <!-- Bootstrap Bundle JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Controlador específico de la vista -->
+    <script type="module"
+        src="/frontend/javascript/controllers_f/EdicionController.js">
+    </script>
 </head>
 
 <body class="bg-white text-dark d-flex flex-column">
@@ -88,13 +93,14 @@
                 <!-- Contenedor insertar -->
                 <div class="contenedorInsertar container mt-5 p-4 border rounded">
                     <h5 class="text-center mb-4">Insertar edición</h5>
-                    <form id="formIncidencia" class="mx-auto">
+                    <form id="formInsertar" class="mx-auto">
 
                     <!-- Fila 1 -->
                     <div class="row mb-3">
                         <div class="col-mg-6 col-lg-4">
                             <label for="nombre" class="form-label">Nombre</label>
-                            <input type="text" class="form-control" id="nombre" name="nombre">
+                            <select class="form-select" id="nombreFormacion" name="id_formacion">
+                            </select>
                         </div>
                         <div class="col-mg-6 col-lg-4">
                             <label for="f_inicio" class="form-label">f_Inicio</label>
@@ -152,7 +158,7 @@
 
     <!-- Modal de edición -->
     <div class="modal fade" id="modalEditar" tabindex="-1" aria-labelledby="modalEditarLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="modalEditarLabel">Editar registro</h5>
@@ -160,28 +166,10 @@
                 </div>
                 <div class="modal-body">
                     <form id="formEditar">
-                        <div class="mb-3">
-                            <label for="editIdTipo" class="form-label">ID Tipo</label>
-                            <input type="text" class="form-control" id="editIdTipo" name="id_tipo" readonly>
-                        </div>
-                        <div class="mb-3">
-                            <label for="editNombre" class="form-label">Nombre</label>
-                            <input type="text" class="form-control" id="editNombre" name="nombre" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="editGrupo" class="form-label">Grupo</label>
-                            <input type="text" class="form-control" id="editGrupo" name="grupo" required>
-                        </div>
+                        
                     </form>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                        Cancelar
-                    </button>
-                    <button type="button" class="btn btn-primary" id="btnGuardarCambios">
-                        Guardar cambios
-                    </button>
-                </div>
+                
             </div>
         </div>
     </div>
