--- a/frontend/pages/Edicion/vistaEdicion.html
+++ b/frontend/pages/Edicion/vistaEdicion.html
@@ -128,6 +128,46 @@
                     </form>
 
                 </div>
+
+                <!-- Contenedor tabla personas en edición -->
+                <div class="container mt-5 p-0">
+                <h5 class="text-center mb-4">Bomberos apuntados a ediciones</h5>
+                <table class="table table-bordered table-striped" id="tablaPersonas">
+                    <thead class="table-dark">
+                    <tr>
+                        <th>Nombre Formación</th>
+                        <th>Fecha Inicio</th>
+                        <th>ID Bombero</th>
+                        <th>Acción</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <!-- Filas dinámicas -->
+                    </tbody>
+                </table>
+                </div>
+
+                <!-- Contenedor insertar persona en edición -->
+                <div class="contenedorInsertar container mt-3 p-4 border rounded">
+                <h5 class="text-center mb-4">Apuntar bombero a edición</h5>
+                <form id="formInsertarPersona" class="mx-auto">
+                    <div class="row mb-3">
+                    <div class="col-md-6">
+                        <label for="id_bombero" class="form-label">ID Bombero</label>
+                        <input type="text" class="form-control" id="id_bombero" name="id_bombero" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="nombreFormacionPersona" class="form-label">Formación (última edición)</label>
+                        <select class="form-select" id="nombreFormacionPersona" name="id_formacion">
+                        </select>
+                    </div>
+                    </div>
+                    <div class="d-flex justify-content-center gap-2">
+                    <button type="reset" class="btn btn-secondary">Limpiar</button>
+                    <button type="submit" class="btn btn-primary">Guardar</button>
+                    </div>
+                </form>
+                </div>
             </main>
         </div>
     </div>
@@ -198,98 +238,24 @@
         </div>
     </div>
 
-    <!-- Modal de añadir equipo-->
-    <div class="modal fade" id="modalInsertarEquipo" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
-            <div class="modal-content">
-
-                <!-- Header -->
-                <div class="modal-header justify-content-center">
-                    <h5 class="modal-title text-danger fw-bold">
-                        Insertar Equipo
-                    </h5>
-                    <button type="button" class="btn-close position-absolute end-0 me-3" data-bs-dismiss="modal"></button>
-                </div>
-
-                <!-- Body -->
-                <div class="modal-body">
-
-                    <!-- Fechas -->
-                    <div class="row mb-3">
-                        <div class="col-md-4">
-                            <label for="fechSalida" class="form-label">Fech_Salida</label>
-                            <input type="date" class="form-control" id="fechSalida">
-                        </div>
-                        <div class="col-md-4">
-                            <label for="fechLlegada" class="form-label">Fech_Llegada</label>
-                            <input type="date" class="form-control" id="fechLlegada">
-                        </div>
-                        <div class="col-md-4">
-                            <label for="fechRegreso" class="form-label">Fech_Regreso</label>
-                            <input type="date" class="form-control" id="fechRegreso">
-                        </div>
-                    </div>
-
-                    <!-- Vehículo -->
-                    <div class="row mb-4">
-                        <div class="col-md-6">
-                            <label for="vehiculo" class="form-label">Vehículo Asignados</label>
-                            <select class="form-select" id="vehiculo">
-                                <option value="">Seleccione vehículo...</option>
-                                <option value="1">Vehículo 1</option>
-                                <option value="2">Vehículo 2</option>
-                            </select>
-                        </div>
-                    </div>
-
-                    <!-- Personal asignado -->
-                    <div class="mb-2 fw-bold">
-                        Personal Asignado
-                    </div>
-
-                    <div class="table-responsive">
-                        <table class="table table-bordered text-center align-middle">
-                            <thead class="table-secondary">
-                                <tr>
-                                    <th>Identificador</th>
-                                    <th>Persona</th>
-                                    <th>Cargo</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-
-                </div>
-
-                <!-- Footer -->
-                <div class="modal-footer justify-content-center gap-3">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                        Volver
-                    </button>
-                    <button type="button" class="btn btn-primary">
-                        Guardar
-                    </button>
-                </div>
-
-            </div>
+   <!-- Modal eliminar persona -->
+    <div class="modal fade" id="modalEliminarPersona" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title">Confirmar eliminación</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
+        <div class="modal-body">
+            ¿Estás seguro de que deseas eliminar este bombero de la edición?
+            <p class="text-muted mb-0">Esta acción no se puede deshacer.</p>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+            <button type="button" class="btn btn-danger" id="btnConfirmarEliminarPersona">Eliminar</button>
+        </div>
+        </div>
+    </div>
     </div>
 
     <!-- FOOTER -->
