--- a/frontend/pages/Instalacion/vistaInstalacion.html
+++ b/frontend/pages/Instalacion/vistaInstalacion.html
@@ -25,9 +25,7 @@
     <script src="/frontend/javascript/helpers/script_filtro_tabla.js" defer></script>
     <!-- Bootstrap Bundle JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-     <script type="module"
-        src="/frontend/javascript/controllers_f/InstalcionController.js">
-    </script>
+    <script type="module" src="/frontend/javascript/controllers_f/InstalacionController.js"></script>
 </head>
 
 <body class="bg-white text-dark d-flex flex-column">
