--- a/frontend/pages/Rol/vistaRol.html
+++ b/frontend/pages/Rol/vistaRol.html
@@ -19,7 +19,7 @@
     </script>
 
     <!-- JS comunes -->
-    <script src="/frontend/javascript/helpers/header_footer.js" defer></script>
+    <script type="module" src="/frontend/javascript/helpers/header_footer.js" defer></script>
     <script src="/frontend/javascript/helpers/script_filtro_tabla.js" defer></script>
 
     <!-- Bootstrap Bundle JS -->
@@ -129,6 +129,30 @@
             </div>
 
         </main>
+    </div>
+
+    <!-- MODAL ELIMINAR -->
+    <div class="modal fade" id="modalEliminar" tabindex="-1" aria-labelledby="modalEliminarLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalEliminarLabel">Confirmar eliminación</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                </div>
+                <div class="modal-body">
+                    ¿Estás seguro de que deseas eliminar este rol?
+                    <p class="text-muted mb-0">Esta acción no se puede deshacer.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                        Cancelar
+                    </button>
+                    <button type="button" class="btn btn-danger" id="btnConfirmarEliminar">
+                        Eliminar
+                    </button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- MODAL EDITAR -->
